--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "basics",
   "version": "1.0.0",
-  "type": "module",
   "description": "Testing small node based codes",
   "main": "app.js",
   "scripts": {
@@ -17,15 +16,15 @@
   "author": "Deepak Jain",
   "license": "ISC",
   "dependencies": {
-    "ioredis": "^5.3.2",
-    "node-fetch": "^2.6.1",
-    "request": "^2.88.2"
+    "node-fetch": "^2.6.1"
   },
   "directories": {
     "test": "tests"
   },
   "devDependencies": {
-    "chai": "^5.0.3",
-    "mocha": "^10.2.0"
+    "chai": "^4.4.1",
+    "ioredis": "^5.3.2",
+    "mocha": "^10.2.0",
+    "request": "^2.88.2"
   }
 }
